{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 140,
  "lineage": "8108d027-11aa-a917-9fa3-e62cb8a6f775",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:security-group/sg-0b7d82609e3a26a20",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7d82609e3a26a20",
            "ingress": [],
            "name": "jobswipe-dev-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "481665100837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jobswipe-dev-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "jobswipe-dev-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029b2631b29d947fd",
            "association_id": "eipassoc-0c62764363cbad8f4",
            "domain": "vpc",
            "id": "eipalloc-029b2631b29d947fd",
            "network_border_group": "us-west-1",
            "network_interface": "eni-05cb648ccc02271bf",
            "private_dns": "ip-10-0-1-221.us-west-1.compute.internal",
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-54-151-19-145.us-west-1.compute.amazonaws.com",
            "public_ip": "54.151.19.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:internet-gateway/igw-0078fda45133cf0d4",
            "id": "igw-0078fda45133cf0d4",
            "owner_id": "481665100837",
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-igw"
            },
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029b2631b29d947fd",
            "association_id": "eipassoc-0c62764363cbad8f4",
            "connectivity_type": "public",
            "id": "nat-017c0635025d5134e",
            "network_interface_id": "eni-05cb648ccc02271bf",
            "private_ip": "10.0.1.221",
            "public_ip": "54.151.19.145",
            "subnet_id": "subnet-00f2e798df98b7a5c",
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:route-table/rtb-03e4bea0c1059d746",
            "id": "rtb-03e4bea0c1059d746",
            "owner_id": "481665100837",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-017c0635025d5134e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:route-table/rtb-0688ed23d027c8f41",
            "id": "rtb-0688ed23d027c8f41",
            "owner_id": "481665100837",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0078fda45133cf0d4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78bbc5334be5a56",
            "route_table_id": "rtb-03e4bea0c1059d746",
            "subnet_id": "subnet-0b4f88f942b8eab62"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcc6ca7a8dc5c45b",
            "route_table_id": "rtb-03e4bea0c1059d746",
            "subnet_id": "subnet-089a0ece78b89ece0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ed05a02909dec78",
            "route_table_id": "rtb-0688ed23d027c8f41",
            "subnet_id": "subnet-00f2e798df98b7a5c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a796830b6bb8dd57",
            "route_table_id": "rtb-0688ed23d027c8f41",
            "subnet_id": "subnet-0671c8156c3b56fa1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:security-group/sg-076cb967f7389ccd7",
            "description": "Security group for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076cb967f7389ccd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "jobswipe-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "481665100837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:security-group/sg-0cf9730084f793040",
            "description": "Security group for database access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf9730084f793040",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "Allow PostgreSQL access from private subnets",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "jobswipe-dev-database-sg",
            "name_prefix": "",
            "owner_id": "481665100837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-database-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:security-group/sg-0ac932ecc56821857",
            "description": "Security group for Redis access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac932ecc56821857",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24",
                  "10.0.4.0/24"
                ],
                "description": "Allow Redis access from private subnets",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "jobswipe-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "481665100837",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-redis-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:subnet/subnet-0b4f88f942b8eab62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f88f942b8eab62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665100837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-private-1",
              "kubernetes.io/cluster/jobswipe-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-private-1",
              "kubernetes.io/cluster/jobswipe-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:subnet/subnet-089a0ece78b89ece0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089a0ece78b89ece0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481665100837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-private-2",
              "kubernetes.io/cluster/jobswipe-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-private-2",
              "kubernetes.io/cluster/jobswipe-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:subnet/subnet-00f2e798df98b7a5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f2e798df98b7a5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481665100837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-public-1",
              "kubernetes.io/cluster/jobswipe-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-public-1",
              "kubernetes.io/cluster/jobswipe-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:subnet/subnet-0671c8156c3b56fa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0671c8156c3b56fa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481665100837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-public-2",
              "kubernetes.io/cluster/jobswipe-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-public-2",
              "kubernetes.io/cluster/jobswipe-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06e96a921103a74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:481665100837:vpc/vpc-06e96a921103a74c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b1a418b393bf5baa",
            "default_route_table_id": "rtb-0327d5e75c195eae6",
            "default_security_group_id": "sg-0711f56d978ed7beb",
            "dhcp_options_id": "dopt-0c253e8eddb07b4a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e96a921103a74c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0327d5e75c195eae6",
            "owner_id": "481665100837",
            "tags": {
              "Environment": "dev",
              "Name": "jobswipe-dev-vpc",
              "kubernetes.io/cluster/jobswipe-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jobswipe-dev-vpc",
              "kubernetes.io/cluster/jobswipe-dev": "shared"
            }
          }
        }
      ]
    }
  ]
}